<resources>
    <string name="app_name">bootloadHID</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="write_done">Success</string>
    <string name="write_failed">Failed</string>
    <string name="choose_file">Choose a file</string>
    <string name="preference_vendor_id" translatable="false">VendorID</string>
    <string name="preference_vendor_id_title">Vendor ID</string>
    <string name="preference_product_id" translatable="false">ProductID</string>
    <string name="preference_product_id_title">Product ID</string>
    <string name="file_name">file</string>
    <string name="about">This app is a USB boot loader for AVR microcontrollers runs on an Android device.</string>
    <string name="settings">Settings</string>
    <string name="title_about">About</string>
    <string name="instructions1">1. Choose a hex file</string>
    <string name="instructions2">2. Connect a device.\n3. Press OK in the confirmation dialog to start writing!</string>
    <string name="version">Version</string>
</resources>
